--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -3,18 +3,18 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <h3 class="panel-title">
-<%= @user.name  %>
-        </h3>
+<%= @user.name %>
+</h3>
       </div>
       <div class="panel-body">
         <img class="media-object img-rounded img-responsive" src="
-<%= gravatar_url(@user,{size: 500})  %>
+<%= gravatar_url(@user, { size: 500 }) %>
 " alt="">
       </div>
     </div>
     
-    <%= render "relationships/follow_button", user: @user  %>
-    
+<%= render 'relationships/follow_button', user: @user %>
+
   </aside>
   <div class="col-xs-8">
     <ul class="nav nav-tabs nav-justified">
@@ -28,26 +28,26 @@ Microposts <span class="badge">
 <% end %>
 </li>
       <li class="
-<%= "active" if current_page?(followings_user_path(@user))  %>
+<%= 'active' if current_page?(followings_user_path(@user)) %>
 ">
-<%= link_to followings_user_path(@user) do  %>
+<%= link_to followings_user_path(@user) do %>
 Followings <span class="badge">
-<%= @count_followings  %>  
+<%= @count_followings %>
 </span>
-<%  end %>
+<% end %>
 </li>
       <li class="
-<%= "active" if current_page?(followers_user_path(@user))  %>
+<%= 'active' if current_page?(followers_user_path(@user)) %>
 ">
-<%= link_to followers_user_path(@user) do  %>
+<%= link_to followers_user_path(@user) do %>
 Followers <span class="badge">
-<%= @count_followers  %>  
+<%= @count_followers %>
 </span>
-<%  end %>
-      </li>
+<% end %>
+</li>
     </ul>
     
-<%= render "microposts/microposts", microposts: @microposts  %>
-    
+<%= render 'users', users: @followings %>
+
   </div>
 </div>
