--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,7 +22,7 @@
 <%= f.label :email, "Email"  %>
 
 
-<%= f.text_field :email, class: "form-control"  %>
+<%= f.email_field :email, class: "form-control"  %>
       
     </div>
     
@@ -40,7 +40,7 @@
       
 <%= f.label :password_confirmation, "Confirmation"  %>
 
-<%= f.text_field :password_confirmation, class: "form-control"  %>
+<%= f.password_field :password_confirmation, class: "form-control"  %>
 
       
     </div>
