--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -23,6 +23,13 @@
         </div>
         <div>
           
+<div class="form-group">
+          
+<%= render "relationship2s/like_button", micropost: micropost  %>
+
+</div>
+          
+          
 <% if current_user == micropost.user %>
 
             
