--- a/app/views/layouts/_flash_messages.html.erb
+++ b/app/views/layouts/_flash_messages.html.erb
@@ -1,9 +1,8 @@
-<%  flash.each do |message_type,message|
+<% flash.each do |message_type, message| %>
 
   <div class="alert alert-
-<%= message_type  %>
+<%= message_type %>
 ">
 <%= message %>
-  </div>
-
-<%  end %>
+</div>
+<% end %>
