--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
           <li>
             <%= link_to "Users", users_path  %>
             
-          </li>
+          </l
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   <%= current_user.name %>
@@ -26,6 +26,9 @@
                           <ul class="dropdown-menu">
                             <li>
                           <%= link_to 'My profile', user_path(current_user) %>
+                            </li>
+                            <li>
+                          <%= link_to "My favorite microposts", likes_user_path(current_user)  %>
                             </li>
                             
                             <li role="separator" class="divider"></li>
