--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -27,6 +27,15 @@ Microposts <span class="badge">
 </span>
 <% end %>
 </li>
+ <li class="
+<%= 'active' if current_page?(likes_user_path(@user)) %>
+">
+<%= link_to likes_user_path(@user) do %>
+Favorite Microposts <span class="badge">
+<%= @count_favorites %>
+</span>
+<% end %>
+</li>
       <li class="
 <%= 'active' if current_page?(followings_user_path(@user)) %>
 ">
