--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
     
     <%= render "relationships/follow_button", user: @user  %>
     
+    
   </aside>
   <div class="col-xs-8">
     <ul class="nav nav-tabs nav-justified">
@@ -27,6 +28,17 @@ Microposts <span class="badge">
 </span>
 <% end %>
 </li>
+
+ <li class="
+<%= 'active' if current_page?(likes_user_path(@user)) %>
+">
+<%= link_to likes_user_path(@user) do %>
+Favorite Microposts <span class="badge">
+<%= @count_favorites %>
+</span>
+<% end %>
+</li>
+
       <li class="
 <%= "active" if current_page?(followings_user_path(@user))  %>
 ">
